src/pages/css/Result.module.css
.App{
    max-width: 1500px;
    margin: auto;
    padding-top: 2vh;
    height: 102vh;

    overflow: hidden;
}

.BrowserApp{
    width: 60vw;
    margin: auto;
    padding-top: 2vh;
    height: 102vh;

    overflow: hidden;
}

img {
    width: 100%;
    height: 100%;
}

.TopImageArea{
    width: 70vw;
    height: 70vw;
    max-width: 400px;
    max-height: 400px;
    margin:auto;
    top: 10vh;
}

.TitleArea{
    width: 100%;
    height: auto;
    text-align: center;

    margin-top: 20px;
}

.MainTitle{
    font-size: 1.2em;
    font-weight: bolder;

    text-align: center;
}

.SubTitle{
    width: 100%;
    margin: auto;
    text-align: center;
    font-size: 1.1em;
    margin-top: 0.6em;
}

.InfoArea{
    width: 90%;
    margin-top: 3vh;
    margin-left: 4vw;
    text-align: left;

    padding: 10px 3px;

    border-radius: 10px;
    background-color: rgb(238, 238, 238);
}
ul{
    padding-left: 20px;
}
.InfoList{
    line-height: 1.4em;
}

.PlusMinusArea{
    width: 100%;
    margin-left: 4vw;
    height: auto;
    margin-top: 15px;

    /* background-color: rgba(250, 235, 215, 0.618); */
}

#PlusTitle{
    width: 100%;
    text-align: center;
    font-size: 1.2em;
    font-weight: bolder;
}

#MinusTitle{
    width: 100%;
    text-align: center;
    font-size: 1.2em;
    font-weight: bolder;
    margin-top: 5px;
}

.PlusMinusList{
    width: 100%;
    text-align: center;
    list-style-type: none;
    margin-top: 5px;
}

.SimilarOppositeArea{
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: fit-content;

    margin-top: 25px;
}

#SimilarArea{
    width: 40%;
    height: fit-content;
    text-align: center;
}

#OppositeArea{
    width: 40%;
    height: fit-content;
    text-align: center;
}

.SimilarOppositeTitle{
    width: 95%;
    background-color: #000;
    color: #fff;
    padding: 5px 10px;

    font-size: 1.1em;
    

    border-radius: 15px;
}

.SimilarOppositeContent{
    text-align: center;
    font-weight: bolder;
}

.FullMythStory{
    position: absolute;
    width: 95vw;
    margin-left: 2.5vw;
    padding-bottom: 5vh;

    cursor: pointer;
    
    top: 95vh;
       
    background-color: #000;
    color: #fff;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
.BrowserFullMythStory{
    position: absolute;
    width: 60vw;
    padding-bottom: 5vh;
    
    cursor: pointer;

    top: 100vh;
       
    background-color: #F2F2F2;
    border-radius: 10px;
}

.FullStoryTitle{
    width: 100%;
    height: max-content;
    text-align: center;
    font-size: bolder;
}

.InnerStory{
    margin-top: 10vh;
    line-height: 1.6em;
    display: none;
    text-align: left;
    word-break: keep-all;

    font-size: 1.1em;
    z-index: 999;
}

.BrowserInnerStory{
    min-height: 100vh;
    margin-top: 10vh;
    line-height: 1.6em;
    display: none;
    text-align: left;
    word-break: keep-all;

    font-size: 1.1em;
    z-index: 999;
}

